# fintech-reconciliation-engine

./: README.md
app_completa/: CREDENCIALES_README.txt  estrategia_filtrado_robustez.tex  index.html  opcion_dos.tex  opcion_tres.tex  opcion_uno.tex  package.json  rebuild.sh  src-tauri  tsconfig.json  v16_architecture.tex  vite.config.ts  walkthrough.md
app_completa/backend/: Dockerfile  backend.spec  backend_server.py  debug_gurobi.py  entry_point.py  requirements.txt  runtime_hook.py
app_completa/backend/app/: config.py  download_model.py  download_model.sh  local_scanner.py  main_desktop.py
app_completa/backend/app/ingestion/: __init__.py  bank_parser.py  cfdi_parser.py  validator.py
app_completa/backend/app/integrations/: __init__.py  facturama.py  google_vision.py
app_completa/backend/app/models/: __init__.py  enums.py  reconciliation.py  transaction.py
app_completa/backend/app/reconciliation/: __init__.py  clustering.py  solver.py  (+3 more)
app_completa/backend/tests/: __init__.py  test_integration.py  test_safe_peeling.py  test_solver.py
app_completa/frontend_src/: App.tsx  main.tsx
app_completa/frontend_src-tauri/: Cargo.toml  Entitlements.plist
app_completa/frontend_src-tauri/icons/: icon.icns
app_completa/frontend_src-tauri/src/: main.rs
app_completa/frontend_src/components/: ClientSelector.tsx  ReconciliationProgress.tsx  ResultsView.tsx  SettingsPanel.tsx  Sidebar.tsx  ValidationScreen.tsx
app_completa/frontend_src/services/: desktopApi.ts
app_completa/frontend_src/styles/: index.css  macos.css
app_completa/frontend_src/types/: index.ts
(+11 files in other folders)
