[package]
name = "conciliacion-financiera"
version = "1.0.0"
description = "Sistema automatizado de conciliación financiera para macOS"
authors = ["Conciliación Financiera Team"]
license = "Proprietary"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-sidecar",
  "shell-open",
  "dialog-all",
  "fs-read-file",
  "fs-write-file",
  "fs-read-dir",
  "fs-create-dir",
  "fs-copy-file",
  "fs-exists",
  "http-all",
  "path-all",
  "notification-all",
  "macos-private-api"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# ARM64 optimizations for Apple Silicon
[target.aarch64-apple-darwin]
rustflags = ["-C", "target-cpu=apple-m1"]

# Intel optimizations (for universal builds)
[target.x86_64-apple-darwin]
rustflags = ["-C", "target-cpu=x86-64"]
